--- a/client/src/components/SearchContainer/SearchContainer.module.css
+++ b/client/src/components/SearchContainer/SearchContainer.module.css
@@ -12,7 +12,7 @@
 }
 .Container h1{
    text-align: center;
-    color: #92C149;
+    color: #4CAF50;
     font-family: Gilroy-ExtraBold;
     font-size:1.5rem;
 }
@@ -33,7 +33,7 @@
 }
 
 .Container button:hover{
-    background-color:#92C149 ;
+    background-color:#4b4b4b ;
 }
 @media (min-width: 350px ) {
     
