Cambio de estilos tablas

--- a/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
+++ b/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
@@ -34,6 +34,19 @@ td button{
     
     
 }
+
+.update{
+    background-color:transparent;
+    border:none;
+    color:#4caf50;
+    
+}
+
+.delete{
+    background-color:transparent;
+    border:none;
+    color:red;
+}
 .column th,.row td{ 
     height:auto;
    font-size: 5vw;
