--- a/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
+++ b/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
@@ -20,8 +20,8 @@
 .column th{
     width: 100vw;
     height: 8vh;
-    background-color:#FFCC02;
-    color: #010101;
+    background-color:#3002ff;
+    color: #c40707;
     
 
 }
