--- a/client/src/components/SearchContainer/SearchContainer.module.css
+++ b/client/src/components/SearchContainer/SearchContainer.module.css
@@ -25,7 +25,7 @@
 }
 .Container button {
     width:50%;
-    background-color: #FFCC02;
+    background-color: #ffdf5f;
     color: black;
     padding: 0.5rem;
     border-radius: 0.4rem;
@@ -33,7 +33,7 @@
 }
 
 .Container button:hover{
-    background-color:#4b4b4b ;
+    background-color:#FFCC02; 
 }
 @media (min-width: 350px ) {
     
