--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,54 +1,86 @@
-
-footer {
+/* @media only screen and (min-widht: 1024px) {
+  
+} */
+*{
+  box-sizing: border-box;
+  margin: 0%;
+  padding: 0%;
+  overflow-y: 0%;
+}
+.footer {
+  width: 100vw;
   display: flex;
   flex-direction: column;
-  margin-bottom: 20px;
+  margin: 0;
   font-weight: bold;
- color: #0000
- 
+  color: rgba(0, 0, 0, 0);
+
 }
 
 .footer-social-media {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  
   background-color: #010101;
   padding: 10px;
   z-index: 2;
+  
  }
  .logoSocialMedia {
-   margin: 0px 10px;
+   margin: 15px 10px;
    z-index: 5;
+   
  }
+
+
+ .footer-info__name {
+  display: flex;
+  margin: 0px 10px 0 850px;
+ 
+}
+.cont{
+background-color: #010101;
+height: 5px;
+width: 100vw;
+}
+hr {
+  color: rgb(255, 255, 255);
+  margin: 0px;
+}
+.block1{
+  width: 80px;
+  height: 40px;
+  margin: 0px;
+  background-color: rgb(0, 0, 0);
+  z-index: 10;
+  position: relative;
+  top:10px;
+}
+.block2{
+  width: 70px;
+  height: 40px;
+  margin: 0px;
+  background-color: rgb(0, 0, 0);
+  z-index: 10;
+  position: relative;
+  left: 1295px;
+  bottom: 35px;
+}
+
  .rightsResercedText{
   background-color: #010101;
+  width: 100vw;
   color: white;
   font-size: 1em;
-  padding-top:20px;
-  padding-bottom:20px;
+  padding-top:40px;
+  padding-bottom:10px;
   justify-content: center;
   text-align: center;
   margin-bottom: 0px;
+  
+  
  }
 
-.footer-info__name {
-  display: flex;
-  margin: 0px 10px;
-}
-.footer-info-right {
-  display: flex;
-  margin: 0px 10px;
-}
-.footer-info  {
-  display: flex;
-  justify-content: center;
-  flex-direction:initial;
-  background-color: #010101;
-  padding: 10px;
-  padding-top:30px;
-  padding-bottom:30px;
-}
 
 
 
