--- a/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
+++ b/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
@@ -34,6 +34,13 @@ h2{
     
 }
 
+.containerbutton{
+    width: 100%;
+    display:flex;
+    justify-content: right;
+    margin-right: 15%;
+}
+
 
 .table td {
     padding: 8px 0px 8px 20px;
@@ -42,7 +49,7 @@ h2{
 
 button{
     display: flex;
-    margin: 10px auto;
+    margin: 10px 0;
     box-shadow: 3px 3px 5px #A0A0A0;
     text-shadow: 1px  1px 2px #000000;
     font-size: 18px;
