--- a/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
+++ b/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
@@ -1,3 +1,21 @@
+@media screen and (max-width: 320px) {
+    .table {
+      display: block;
+      overflow-x: auto;
+    }
+}
+
+.column {
+    display: flex;
+    flex-direction:row;
+
+}
+
+.containerTable{
+    overflow-x:scroll;
+    width: 100vw; 
+}
+
 .container{
     display: flex;
     justify-content:center;
@@ -15,7 +33,7 @@ h2{
     padding:10px
 }
 
-.table{
+table{
     margin: 20px 10px;
     overflow:scroll;
     border: none;
@@ -26,15 +44,19 @@ h2{
 
 
 
-.table th{
+.table th {
     margin: 1px;
     padding:20px 0px 20px 20px;
     background-color: #FFCC02;
     box-shadow:  2px  2px 2px #A0A0A0;
     text-shadow: 1px  1px 2px #000000;
-    
+  
     
 }
+.table tr{
+    overflow-x: scroll;
+}
+
 
 .containerbutton{
     width: 100%;
