--- a/client/src/components/Table/Table.module.css
+++ b/client/src/components/Table/Table.module.css
@@ -1,20 +1,35 @@
-
+/*aqui agregue el media, en el crud el scroll*/
+@media screen and (max-width: 420px) {
+  table {
+    display: block;
+    overflow-x: auto;
+  }
+}
 .Crud{
-   /*  background-color: #8f8f8f; */
-    width: 80vw;
-   
+    width: 100vw;
+    height: 50vh;
+    overflow:scroll; 
 }
-table tr:nth-child(even){
-  background-color: #ffffff;
+
+table tr{
   
+  border-bottom-width: 1px;
+  /* overflow-x: scroll; */
 }
-
 table{
-
  text-align:flex start;
   border-collapse: collapse;
-
+  margin-left: 1px;
 }
+table thead th{
+  width: 50vw;
+  vertical-align: bottom;
+}
+tbody td {
+  width: 100vw;
+}
+
+
 @media only screen and (min-width: 1024px ) {
     
 .Crud{
@@ -22,21 +37,18 @@ table{
   width: 90vw;
   position: relative;
   left: 50px;
- 
+  
 }
+
   tbody tr:hover{
-    background-color: #cccccc;
+    background-color: #c4c4c4;
     
-  }
-  .th{
-    color: aqua;
   }
   
  table,table thead,table tbody{
    width: 80vw;
-   
-   
  }
+
 
  
   
