--- a/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
+++ b/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
@@ -11,100 +11,160 @@
 
 .container{
     font-family:Gilroy-Light; 
+    
+}
+.row{
+   width: auto; 
+   height: 5px;
 }
 .row td{
     width: 100vw;
-    height: 7vh;
-   
+  
 }
+
+/*  aqui se puso el row */
+.column{
+    display: flex;
+    flex-direction:row;
+}
+
 .column th{
-    width: 100vw;
-    height: 8vh;
+    width: 50vw;
+    height: 30px;
     background-color:#FFCC02;
     color: #000000;
+    text-align: left;
     
-
 }
-td button{
-    width: 50vw;
-    background-color: #FFCC02;
-    padding: 0.5rem;
+.row button{
+    width: 20px;
+    /* padding: 10rem; */
     border-radius: 0.5rem;
     max-width:200px;
-    
-    
-    
+
 }
 
 .update{
+    font-size: 17px;
     background-color:transparent;
     border:none;
     color:#4caf50;
+    margin-right: 15px;
+    padding: 0%;
     
 }
 
 .delete{
+    font-size: 17px;
     background-color:transparent;
     border:none;
     color:red;
+    padding: 0%;
+    
 }
-.column th,.row td{ 
-    height:auto;
-   font-size: 5vw;
-   display: inline-block;
-   margin: auto;
-
+.row td{ 
+   font-size: 15px;
+    display: inline-block;
+    width: 50vw; 
+    height:30px;
+   overflow:auto;
+}
+#peq{
+    width: 50px;
+}
+#med{
+    width: 90px;
+    align-items: center;
+  
 }
 
-@media (min-width: 480px ) {
+/* @media (min-width: 480px ) {
     td button{
         width: 40%;
         
      }
      .column th,.row td{ 
-        font-size: 4vw;
+        font-size: 3vw;
     }
-}
-@media (min-width: 780px ) {
+    .row td{
+        width: 100vw;
+        height: 7vh;
+    }
+}*/
+@media (min-width: 1024px ) {
     
-    .column ,.row  { 
-       
+    .container{
+        font-family:Gilroy-Light; 
+        
+    }
+    .row{
+       width: auto; 
+       height: 5px;
+    }
+    .row td{
+        width: 100vw;
+      
+    }
+    
+    /*  aqui se puso el row */
+    .column{
         display: flex;
         flex-direction:row;
     }
     
-    .column th,.row td{
-        width:10vw;
-        font-size: 1.2vw;
-        overflow:auto;
-       
-      
-    }
-    td button{
-       width: 55%;
-       height: 95%;
-    }
-    .row td ,.column th{
+    .column th{
+        width: 15vw;
+        height: 30px;
+        background-color:#FFCC02;
+        font-size: 20px;
+        color: #000000;
+        text-align: left;
+        padding: 0%;
         
-    padding-top:0.2rem;
-    padding-bottom:0.2rem;
-    padding-left:0.1rem;
-    padding-right:0.1rem;
-    
-    
-
-     
     }
-    .column{
-        padding: 0.9rem;
-        background-color:#FFCC02 ; 
-       
-    }
-    .row{
-        padding: 1rem;
-       
-    }
-
+    .row button{
+        width: 0px;
+        /* padding: 10rem; */
+        border-radius: 0.5rem;
+        max-width:200px;
     
+    }
     
- }
+    .update{
+        font-size: 20px;
+        background-color:transparent;
+        border:none;
+        color:#4caf50;
+        margin-right: 40px;
+        padding: 0%;
+        
+    }
+    
+    .delete{
+        font-size: 20px;
+        background-color:transparent;
+        border:none;
+        color:red;
+        padding: 0%;
+        
+    }
+    .row td{ 
+       font-size: 20px;
+        display: inline-block;
+        width: 15vw; 
+        height:50px;
+       overflow:auto;
+    }
+    #peq{
+        width: 70px;
+        text-align:  center;
+    }
+    #med{
+        width: 90px;
+        align-items: center;
+    }
+    #gra{
+        width: 350px;
+    }
+      
+ } 
