--- a/client/src/views/Administrator/Cruds/CrudMentor/CrudMentor.module.css
+++ b/client/src/views/Administrator/Cruds/CrudMentor/CrudMentor.module.css
@@ -3,6 +3,7 @@
 	display: flex;
 	justify-content: content;
 	flex-direction: column;
+	padding-top: 10%;
 }
 
 @media screen and (max-width: 320px) {
