--- a/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
+++ b/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
@@ -1,10 +1,3 @@
-@media screen and (max-width: 320px) {
-  .table {
-    display: block;
-    overflow-x: auto;
-  }
-}
-
 .column {
   display: flex;
   flex-direction: row;
@@ -22,6 +15,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-top: 10%;
 }
 
 h2 {
@@ -82,6 +76,13 @@ button {
 button:hover {
   background-color: #000000;
   color: #ffcc02;
+}
+
+@media screen and (max-width: 320px) {
+  .table {
+    display: block;
+    overflow-x: auto;
+  }
 }
 
 @media only screen and (max-width: 700px) {
