--- a/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
+++ b/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
@@ -1,155 +1,208 @@
-@font-face {
-	font-family: Gilroy-ExtraBold;
-	src: url(./../../../../assets/Fontfamily/Gilroy-ExtraBold.otf);
-}
-
-@font-face {
-	font-family: Gilroy-Light;
-	src: url(../../../../assets/Fontfamily/Gilroy-Light.otf);
-}
-
 .container {
-	font-family: Gilroy-Light;
-	padding-top: 10%;
-}
-.row {
-	width: auto;
-	height: 5px;
-}
-.row td {
-	width: 100vw;
+  font-family: Gilroy-Light;
+  display: flex;
+  justify-content: content;
+  flex-direction: column;
+  padding-top: 10%;
 }
 
-/*  aqui se puso el row */
+@media screen and (max-width: 320px) {
+  .table {
+    display: block;
+    overflow-x: auto;
+  }
+  .modal h3 {
+    color: #000000;
+    text-align: center;
+    font-size: 20px;
+  }
+}
+
 .column {
-	display: flex;
-	flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
-.column th {
-	width: 50vw;
-	height: 30px;
-	background-color: #ffcc02;
+.containerTable {
+  overflow-x: scroll;
+  width: 95vw;
+  overflow-y: scroll;
+  max-height: 400px;
+  margin: 10px auto;
+}
+
+.table {
+  width: 92vw;
+  margin: 20px auto;
+  overflow: scroll;
+  border: none;
+  overflow-x: auto;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+}
+
+h1 {
 	color: #000000;
-	text-align: left;
-}
-.row button {
-	width: 20px;
-	/* padding: 10rem; */
-	border-radius: 0.5rem;
-	max-width: 200px;
-}
-
-.update {
-	font-size: 17px;
-	background-color: transparent;
-	border: none;
-	color: #4caf50;
-	margin-right: 15px;
-	padding: 0%;
+	background-color: #f1f1f1;
+	width: 99%;
+	padding: 20px 0;
+	text-shadow: 1px 1px 2px #000000;
+	box-shadow: 2px 2px 2px #a0a0a0;
+	margin: 10px;
+  text-align: center;
 }
 
-.delete {
-	font-size: 17px;
-	background-color: transparent;
-	border: none;
-	color: red;
-	padding: 0%;
+.table th {
+  margin: 1px;
+  padding: 20px 0px 20px 20px;
+  background-color: #ffcc02;
+  box-shadow: 2px 2px 2px #a0a0a0;
+  font-weight: 800;
 }
-.row td {
-	font-size: 15px;
-	display: inline-block;
-	width: 50vw;
-	height: 30px;
-	overflow: auto;
-}
-#peq {
-	width: 50px;
-}
-#med {
-	width: 90px;
-	align-items: center;
+.table tr {
+  overflow-x: scroll;
 }
 
-/* @media (min-width: 480px ) {
-  td button{
-      width: 40%;
-      
-   }
-   .column th,.row td{ 
-      font-size: 3vw;
-  }
-  .row td{
-      width: 100vw;
-      height: 7vh;
-  }
-}*/
-@media (min-width: 1024px) {
-	.container {
-		font-family: Gilroy-Light;
-	}
-	.row {
-		width: auto;
-		height: 5px;
-	}
-	.row td {
-		width: 100vw;
-	}
+.containerbutton {
+  width: 100%;
+  display: flex;
+  justify-content: left;
+ 
+}
 
-	/*  aqui se puso el row */
-	.column {
+.table td {
+  padding: 8px 0px 8px 20px;
+  border-bottom: 1px solid #000000;
+}
+
+tbody tr:hover {
+  background-color: #cccccc;
+}
+
+button {
+  display: flex;
+  margin: 10px 0;
+  box-shadow: 3px 3px 5px #a0a0a0;
+  text-shadow: 1px 1px 2px #000000;
+  font-size: 18px;
+  cursor: pointer;
+  justify-content: center;
+  padding: 8px;
+}
+
+#update {
+  width: 40px;
+  background-color: transparent;
+  padding: 2px;
+  margin: 2px;
+  border: none;
+  box-shadow: none;
+  color: #1a2818;
+  cursor: pointer;
+}
+
+#update :hover {
+  background-color: none;
+  color: red;
+}
+
+#delete {
+  width: 40px;
+  background-color: transparent;
+  padding: 2px;
+  margin: 2px;
+  border: none;
+  box-shadow: none;
+  color: #1a2818;
+  cursor: pointer;
+}
+
+#delete :hover {
+  color: red;
+}
+
+.modal {
+  max-width: 600px;
+  background-color: #ffffff;
+  margin: 40px auto;
+  align-items: center;
+  padding: 30px;
+  color: #000000;
+  border-radius: 10px;
+}
+
+.modal h3 {
+  color: #000000;
+  text-align: center;
+  font-size: 28px;
+  font-family: Gilroy-ExtraBold;
+}
+
+.modal button {
+  border-radius: 10px;
+  background-color: #ffcc02;
+  max-width: 170px;
+  padding: 8px;
+  font-size: 16px;
+  box-shadow: 3px 3px 5px #a0a0a0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal button:hover {
+  background-color: #000000;
+  color: #ffcc02;
+  max-width: 170px;
+  padding: 8px;
+  font-size: 16px;
+  box-shadow: 3px 3px 5px #a0a0a0;
+  display: flex;
+  justify-content: center;
+}
+
+.header{
+  display: flex;
+  justify-content: space-around;
+  width: 98%;
+  margin: 20px auto;
+  align-items: center;
+ 
+}
+
+input {
+	min-width: 25vw;
+	height: 6vh;
+	border: #010101 solid 0.12rem;
+	border-radius: 1rem;
+	padding: 2px 15px;
+}
+
+@media screen and (max-width: 800px) {
+	.header{
 		display: flex;
-		flex-direction: row;
-	}
-
-	.column th {
-		width: 15vw;
-		height: 30px;
-		background-color: #ffcc02;
-		font-size: 20px;
-		color: #000000;
-		text-align: left;
-		padding: 0%;
-	}
-	.row button {
-		width: 0px;
-		/* padding: 10rem; */
-		border-radius: 0.5rem;
-		max-width: 200px;
-	}
-
-	.update {
-		font-size: 20px;
-		background-color: transparent;
-		border: none;
-		color: #4caf50;
-		margin-right: 40px;
-		padding: 0%;
-	}
-
-	.delete {
-		font-size: 20px;
-		background-color: transparent;
-		border: none;
-		color: red;
-		padding: 0%;
-	}
-	.row td {
-		font-size: 20px;
-		display: inline-block;
-		width: 15vw;
-		height: 50px;
-		overflow: auto;
-	}
-	#peq {
-		width: 70px;
-		text-align: center;
-	}
-	#med {
-		width: 90px;
+		flex-direction: column;
+		width: 98%;
+		margin: auto;
 		align-items: center;
+	   
+	  }
 	}
-	#gra {
-		width: 350px;
-	}
+
+
+@media screen and (max-width: 600px) {
+  .modal {
+    margin: 20px;
+  }
+  .modal h3 {
+    color: #000000;
+    text-align: center;
+    font-size: 24px;
+  }
+
+  .container {
+    padding-top: 15%;
+  }
+
+ 
 }
