--- a/client/src/views/Administrator/Match/components/Cohort/Cohort.module.css
+++ b/client/src/views/Administrator/Match/components/Cohort/Cohort.module.css
@@ -5,9 +5,10 @@
     background-color: #FFCC02;
     min-height: 70px;
     font-size:18px;
-    padding-top: 100px;
+    padding-top: 10%;
     width: 100%;
     box-shadow: 3px 3px 5px #A0A0A0;
+   
 
 }
 
@@ -53,7 +54,7 @@ color: #000000;
   
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 900px) {
 
   
     .buttonSelect{
@@ -74,6 +75,7 @@ color: #000000;
         background-color: #FFCC02;
         min-height: 70px;
         font-size:18px;
+        padding-top: 15%;
       
     }
 
