--- a/client/src/views/Administrator/NavAdmin/NavAdmin.module.css
+++ b/client/src/views/Administrator/NavAdmin/NavAdmin.module.css
@@ -50,7 +50,7 @@
 .items li{
   font-weight: bold;
   text-align: center;
-  text-shadow: 3px 3px 2px rgb(167, 167, 167);
+  text-shadow: 1px 1px 2px #000000;
   width: 90%;
 }
 
