--- a/client/src/components/schedulledSessionCard/schedulledSessionCard.module.css
+++ b/client/src/components/schedulledSessionCard/schedulledSessionCard.module.css
@@ -1,5 +1,5 @@
 :root {
-    --green:#92C149;
+    --negro:#000000;
     --yellow:#FFCC02;
 }
 
@@ -14,7 +14,7 @@
     
 } */
 .title{
-    color:var(--green);
+    color:var(--negro);
     text-align: center;
     font-size: 24px;
     margin-top: 10px;
@@ -23,26 +23,37 @@
 
 
 .subtitles{
-    color:var(--green);
+    color:var(--negro);
     text-align: center;
     font-size: 22px;
     margin-top: 10px;
     margin-bottom: 10px;
 }
-.whitebox {
+.whitebox {/*
     width: 370px;
     height: 600px;
     display: flex;
     flex-direction: column;
     /* position: absolute;
     left: 20px;
-    right: 20px; */
+    right: 20px; 
     background: #f6f6f6;
     border-radius: 10px;
     justify-content: center;
     align-items: center;
     padding: 20px;
-    margin-bottom: 50px;
+    margin-bottom: 50px; 
+    */
+    height: 80vh;
+    width: 100%;
+    
+    border-radius: 10px;
+    padding: 40px;
+    background-color: #ffcc02;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
   }
 
 .info {
@@ -76,7 +87,7 @@ word-wrap: break-word;
     position: relative;
     display: inline-block;
     padding: 8px 20px;
-    background: #ffcc02;
+    background: #f8f7f4;
     color: #000;
     border-radius: 10px;
     text-decoration: none;
@@ -88,9 +99,9 @@ word-wrap: break-word;
     font-size: 22px;
 }
 .btn:hover {
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.6);
-    background: #000;
-    color: #ffcc02;
+    opacity: 0.8;
+    transform: scale(1.1);
+    color: rgb(26, 25, 25) !important;
   }
 .note{
     font-size: 14px;
