--- a/client/src/views/Mentor/welcome.css
+++ b/client/src/views/Mentor/welcome.css
@@ -1,27 +1,31 @@
-
+.container-home {
+  background: #f1f1f1;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  margin-top: 85px; 
+}
   
   div.Welcome{
-    
-    margin-top: 8%;
-    margin-left: 40%;
-    background-color: #FEFEFE;
-    padding-top: 1%;
-    max-width: 380px;
-    min-width: 380px;
-    min-height: 320px;
-    max-height: 320px;
-    border-radius: 15px;
-    box-shadow:0px 15px #92C149,
-    0px 5px black;
+   
+    height: 80vh;
+    width: 100%;
+    max-width: 400px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 40px;
+    background-color: #fff;
     align-items: center;
     justify-content: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: column
   }
   
   div.Welcome h2{
-    color: #92C149;
-    margin-left: -80px;
+    color: #030303;
+    margin-left: -74px;
   }
   
     
@@ -45,4 +49,11 @@
     padding-left: 40px;
     text-decoration: none;
     color: #000;
+    transition: all 0.5s;
+  }
+  .btn-welcom-mentor:hover{
+    opacity: 0.8;
+    transform: scale(1.1);
+    color: rgb(26, 25, 25) !important;
+    
   }
