--- a/client/src/views/Student/MultipleChoice/MultipleChoice.module.css
+++ b/client/src/views/Student/MultipleChoice/MultipleChoice.module.css
@@ -1,26 +1,29 @@
+.contAll{
+    position: relative;
+}
 .contenedor{
-    width:100vw;
-    height: 100vh;
-    background-color: #D7D7D7;
+    width:100%;
+    height: 90vh;
+    background-color: #F1F1F1;
 }
 
-.heder{
-    width: auto;
-    height: auto;
+.header{
+    width: 100%;
+    height: 12rem;
     background-color: #FFCC02;
     padding:1.5rem 1.5rem 1.5rem 1.5rem;
-    
 }
 
-.heder p{
+.header p{
+    margin-top: 7rem;
+    padding-left: 2rem;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 3.6vw;
+    font-size: 1.5.rem;
 }  
 
-h3{
-   
-    font-size: 6.5vw;
-    color: #92C149;
+.titleCardStudent{
+    font-size: 2rem;
+    color: #000;
 }
 p{
     font-family: Gilroy-Light;
@@ -29,16 +32,23 @@ p{
 button{
     width: 50%;
     border-radius: 10px;
+    display: flex;
+    justify-content: center;
     background-color: #FFCC02;
     max-width: 200px;
     padding: 1rem;
     font-size: 1.5vw;
 }
 
-.select{
-    background-color: black;
+.selectStudent{
+    width: 80%;
 }
-
+.foot{
+    width: 100%;
+    height: 6rem;
+    background-color: #FFCC02;
+    padding:1.5rem 1.5rem 1.5rem 1.5rem;
+}
 
 @media (min-width:450px ) {
     .heder p{
