add actions and match button

--- a/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
+++ b/client/src/views/Administrator/Cruds/CrudStudents/Style.module.css
@@ -123,7 +123,7 @@ button {
 .modal {
   max-width: 600px;
   background-color: #ffffff;
-  margin: 40px auto;
+  margin: 1% auto;
   align-items: center;
   padding: 30px;
   color: #000000;
