--- a/client/src/components/SearchContainer/SearchContainer.module.css
+++ b/client/src/components/SearchContainer/SearchContainer.module.css
@@ -11,6 +11,7 @@
 	text-shadow: 1px 1px 2px #000000;
 	box-shadow: 2px 2px 2px #a0a0a0;
 	margin: 10px;
+	text-align: center;
 }
 
 .Container input {
