--- a/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
+++ b/client/src/views/Administrator/Match/components/ListStudentMentor/ListStudentMentor.module.css
@@ -61,6 +61,23 @@ tbody tr:hover {
   margin-top: 30px;
 }
 
+.containerbuttonactions {
+  width: 100%;
+  display: flex;
+  justify-content: left;
+}
+
+#update {
+  width: 40px;
+  background-color: transparent;
+  padding: 2px;
+  margin: 2px;
+  border: none;
+  box-shadow: none;
+  color: #1a2818;
+  cursor: pointer;
+}
+
 .table td {
   padding: 8px 0px 8px 20px;
   border-bottom: 1px solid #000000;
