--- a/client/src/views/Administrator/Cruds/CrudSessions/CrudSessions.module.css
+++ b/client/src/views/Administrator/Cruds/CrudSessions/CrudSessions.module.css
@@ -120,6 +120,12 @@ button {
 	color: #000000;
 	border-radius: 10px;
 }
+.modal input[type=date] {
+  /* margin-top: 20px; */
+  /* text-align: right; */
+  font-size: 12px;
+  color: transparent;
+}
 
 .modal h3 {
 	color: #000000;
@@ -164,8 +170,5 @@ button {
 	.container{
 		padding-top: 15%;
 	}
-	.swal2-container.swal2-backdrop-show, .swal2-container.swal2-noanimation {
-  
-		z-index: 11000;
-	  }
+	
 }
