--- a/client/src/components/schedulledSessionCard/schedulledSessionCard.module.css
+++ b/client/src/components/schedulledSessionCard/schedulledSessionCard.module.css
@@ -1,13 +1,7 @@
 :root {
-    --negro:#000000;
-    --yellow:#FFCC02;
+  --negro: #000000;
+  --yellow: #ffcc02;
 }
-
-.sessiona{
-    background: #FFCC02;
-
-}
-
 
 /* .card {
     display:flex;
@@ -18,121 +12,130 @@
     font-size: 20px;
     
 } */
-.title{
-    color:var(--negro);
-    text-align: center;
-    font-size: 24px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.title {
+  color: var(--negro);
+  text-align: center;
+  font-size: 24px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-
-.subtitles{
-    color:var(--negro);
-    text-align: center;
-    font-size: 22px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+.subtitles {
+  color: var(--negro);
+  text-align: center;
+  font-size: 22px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-.whitebox {/*
-    width: 370px;
-    height: 600px;
-    display: flex;
-    flex-direction: column;
-    /* position: absolute;
-    left: 20px;
-    right: 20px; 
-    background: #f6f6f6;
-    border-radius: 10px;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-    margin-bottom: 50px; 
-    */
-    height: 80vh;
-    width: 100%;
-    
-    border-radius: 10px;
-    padding: 40px;
-    background-color: #ffcc02;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
-  }
+.whitebox {
+  width: 100%;
+
+  border-radius: 10px;
+  padding-bottom: 60px;
+  background-color: #ffcc02;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 60px;
+}
 
 .info {
-    font-size: 22px;
-
+  font-size: 22px;
 }
-.linkSession
-{
-position: relative;  
-font-size: 22px;
-background:transparent;
-color: #000;
-border-radius: 10px;
-text-decoration: none;
-margin-top: 20px;
-margin-bottom: 10px;
-box-shadow: 0 0px 0px rgb(0 0 0 / 0%);
-width: 100%;
-word-wrap: break-word;
-
+.linkSession {
+  position: relative;
+  font-size: 22px;
+  background: transparent;
+  color: #000;
+  border-radius: 10px;
+  text-decoration: none;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  box-shadow: 0 0px 0px rgb(0 0 0 / 0%);
+  width: 100%;
+  word-wrap: break-word;
 }
-.message{
-    color:var(--green);
-    text-align: center;
-    font-size: 22px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    font-weight: bold;
+.message {
+  color: var(--green);
+  text-align: center;
+  font-size: 22px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
-.btn{
-    position: relative;
-    display: inline-block;
-    padding: 8px 20px;
-    background: #f8f7f4;
-    color: #000;
-    border-radius: 10px;
-    text-decoration: none;
-    margin-top: 20px;
-    box-shadow: 0 10px 20px rgb(0 0 0 / 20%);
-    transition: 0.5s;
-    border: none;   
-    cursor: pointer; 
-    font-size: 22px;
+.btn {
+  position: relative;
+  display: inline-block;
+  padding: 8px 20px;
+  background: #f8f7f4;
+  color: #000;
+  border-radius: 10px;
+  text-decoration: none;
+  margin: 10px;
+  width: 60%;
+  box-shadow: 0 10px 20px rgb(0 0 0 / 20%);
+  transition: 0.5s;
+  border: none;
+  cursor: pointer;
+  font-size: 22px;
 }
 .btn:hover {
-    opacity: 0.8;
-    transform: scale(1.1);
-    color: rgb(26, 25, 25) !important;
+  opacity: 0.8;
+  transform: scale(1.1);
+  color: rgb(26, 25, 25) !important;
+}
+.note {
+  font-size: 14px;
+  margin-top: 10%;
+}
+.green {
+  width: 85vw;
+  height: 47vh;
+  background-color: #92c149;
+  border-radius: 20px;
+}
+@media (min-width: 400px) {
+  .green,
+  .container {
+    max-width: 400px;
   }
-.note{
-    font-size: 14px;
-    margin-top: 10%;
 }
-.green{
-    width:85vw;
-    height: 47vh;
-    background-color: #92C149;
-    border-radius: 20px;
+
+@media (min-width: 700px) {
+  .green,
+  .container {
+    max-width: 500px;
+  }
+  .green {
+    height: 60vh;
+  }
+  .container {
+    height: 57vh;
+  }
 }
-@media (min-width:400px ) {
-    .green,.container{
-        max-width: 400px;
-    }
-}        
 
+.sessiona {
+  background: #ffcc02;
+}
 
-@media (min-width:700px ) {
-    .green,.container{
-        max-width: 500px;
-    }
-    .green{
-        height: 60vh;
-    }
-    .container{
-        height: 57vh;
-    }
-} 
+.sessionHab {
+  background: white;
+  width: 100%;
+}
+
+.sessionHab h3 {
+  text-align: left;
+}
+.buttonsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  
+  /* flex-direction: column;*/
+  text-align: center; 
+}
+
+.buttonsContainer > div {
+    flex: 1 1 30%; /*grow | shrink | basis */
+   
+}
