--- a/client/src/views/Mentor/welcome.css
+++ b/client/src/views/Mentor/welcome.css
@@ -1,59 +1,73 @@
-.container-home {
-  background: #f1f1f1;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+* {
+  margin-top: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+  }
+.container-homesession {
   width: 100%;
+  height: 100vh;
+  padding-top: 15vh;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  font-family: Roboto, sans-serif;
+  font-size: 20px;
+}
+
+.welcome-mentor {
+  width: 55%;
+  padding: 0 2rem 0 2rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  background-color: #FFCC02;
+}
+
+.logoImg{
+  width: 90%;
+}
+
+.logoContainer{
+  width: 45%; 
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  margin-top: 85px; 
 }
+.mentortitle{
+  font-size: 38px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+.check-mentor li {
+  margin-left:-10px ;
+  margin-right: 30px;
+  padding: 10px;
+  list-style: #C4C4C4;
+}
+.btn-welcom-mentor{
+  font-size: 20px;
+  background-color:#ffffff;
+  border: transparent;
+  border-radius: 10px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-right: 40px;
+  padding-left: 40px;
+  text-decoration: none;
+  color: #000;
+  transition: all 0.5s;
+}
+.btn-welcom-mentor:hover{
+  opacity: 0.8;
+  transform: scale(1.1);
+  color: rgb(26, 25, 25) !important;
   
-  div.Welcome{
-   
-    height: 80vh;
-    width: 100%;
-    max-width: 400px;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    padding: 40px;
-    background-color: #fff;
-    align-items: center;
-    justify-content: center;
-    display: flex;
-    flex-direction: column
-  }
+}
+
+
   
-  div.Welcome h2{
-    color: #030303;
-    margin-left: -74px;
-  }
-  
-    
-    
-      ul li {
-        margin-left:-10px ;
-        margin-right: 30px;
-        padding: 10px;
-        list-style: #C4C4C4;
-        ;
-      }
-  
-  .btn-welcom-mentor{
-    font-size: 17px;
-    background-color:#FFCC02;
-    border: transparent;
-    border-radius: 10px;
-    padding-top: 6px;
-    padding-bottom: 6px;
-    padding-right: 40px;
-    padding-left: 40px;
-    text-decoration: none;
-    color: #000;
-    transition: all 0.5s;
-  }
-  .btn-welcom-mentor:hover{
-    opacity: 0.8;
-    transform: scale(1.1);
-    color: rgb(26, 25, 25) !important;
-    
-  }
+
